[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Items and objects/chest_01.png" type="Texture" id=1]
[ext_resource path="res://Item/ChestAnimation.gd" type="Script" id=2]
[ext_resource path="res://UI/Display_Instruction.tscn" type="PackedScene" id=3]
[ext_resource path="res://Item/PopSmoke.tscn" type="PackedScene" id=4]

[sub_resource type="CapsuleShape2D" id=6]
radius = 7.99997
height = 18.0

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "Chest",
"speed": 5.0
} ]

[node name="ChestAnimation" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 7 )
rotation = 1.5708
shape = SubResource( 6 )

[node name="Sprite" type="StaticBody2D" parent="."]
position = Vector2( 0, -1 )

[node name="ChestAnimation" type="AnimatedSprite" parent="Sprite"]
position = Vector2( 0, 1 )
frames = SubResource( 11 )
animation = "Chest"

[node name="PopSmoke" parent="Sprite" instance=ExtResource( 4 )]
animation = "Smoke"
playing = false

[node name="Display_Instruction" parent="." instance=ExtResource( 3 )]
margin_left = 1.0
margin_top = -33.0
margin_right = 1.0
margin_bottom = -33.0

[connection signal="body_entered" from="." to="." method="_on_ChestAnimation_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_ChestAnimation_body_exited"]
[connection signal="animation_finished" from="Sprite/ChestAnimation" to="." method="_on_ChestAnimation_animation_finished"]
[connection signal="animation_finished" from="Sprite/PopSmoke" to="." method="_on_PopSmoke_animation_finished"]
